--- a/requester/Cargo.toml
+++ b/requester/Cargo.toml
@@ -5,4 +5,6 @@ authors = ["stsh"]
 edition = "2018"
 
 [dependencies]
-reqwest = {version = "*", features = ["blocking"]}
+# Rutracker stoped to return proper answer with reqwest::blocking.
+# Maybe try to update it later
+reqwest = "0.9.24"
